<resources>

    <string name="app_name">Tjombol</string>
    <string name="username">Username</string>

    <!--Login Activity View-->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="sign_up_text"><![CDATA[<font color=#ffffff>Don\'t have an account? </font> <font color=#67d6d3>Sign Up</font>]]></string>

    <string name="login_email_error">Wrong Email</string>
    <string name="login_password_error">Empty Password</string>
    <string name="login_authentication_error">Authentication Failed</string>

    <string name="login_forgot_password">Forgot your password?</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="app_logo">App Logo</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="today_top_bar">Today</string>
    <string name="date_top_bar">22 March, 2019</string>

    <string name="transactions_top_bar">Transactions</string>
    <string name="month_top_bar">March, 2019</string>

    <string name="wallet_balance_text">Wallet Balance</string>
    <string name="wallet_balance_number">$750</string>

    <!--HomeFragment View-->
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="profile">Profile</string>

    <string name="action_add_favourite">Add Favourite</string>
    <string name="action_play_next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Network Errors-->
    <string name="networkError">Oh! You are not connected to a wifi or cellular data network. Please connect and try again</string>
    <string name="networkErrorCode">NO_INTERNET_CONNECTION</string>
    <string name="unknownError">Something went wrong!</string>

    <string name="requestTimeOutError">Oooops! We couldn’t capture your request in time. Please try again.</string>

    <string name="errorCodeMalformedJson">MALFORMED_JSON</string>
    <string name="responseMalformedJson">Oops! We hit an error. Try again later.</string>

    <string name="errorCodeConnectFailed">Connection failed</string>
    <string name="responseConnectFailed">Oops! Connection timeout.</string>

    <string name="search_hint">Search Articles</string>
    <string name="action_search">Search</string>
    <string name="password">Password</string>



</resources>
