<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/appLogoLogin"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            app:srcCompat="@drawable/app_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_email_white"
                android:drawablePadding="15dp"
                android:ems="13"
                android:hint="Email"
                android:inputType="textPersonName"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat" />

            <EditText
                android:id="@+id/passwordLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/icon_lock_white"
                android:drawablePadding="15dp"
                android:ems="13"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat" />

            <Button
                android:id="@+id/forgotPasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="3dp"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:fontFamily="@font/montserrat" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/primary_rounded_rectangle"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                app:fontFamily="@font/montserrat" />

            <Button
                android:id="@+id/goToSignupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/no_account"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:fontFamily="@font/montserrat" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>